2024-12-11T00:40:40Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12267357076 # 702
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-11
* notice: last 14d: unq all: 11 24
* notice: prev accum: outdated-unq outdated-all / unq all: 897 4799 / 911 4835
* notice: next accum: outdated-unq outdated-all / unq all: 900 4811 / 911 4835
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-11-26] / []

2024-12-10T12:15:30Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12255889458 # 701
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-10
* notice: last 14d: unq all: 13 31
* notice: prev accum: outdated-unq outdated-all / unq all: 897 4799 / 910 4829
* notice: next accum: outdated-unq outdated-all / unq all: 897 4799 / 911 4835
* notice: prev exec diff / last date diff / accum: unq all: +1 +6 -1 -5 / +1 +6 -0 -0 / 1 6
* notice: removed / changed dates: [] / [2024-11-26 2024-12-10]

2024-12-10T00:41:12Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12247054878 # 700
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-10
* notice: last 14d: unq all: 13 30
* notice: prev accum: outdated-unq outdated-all / unq all: 896 4797 / 910 4829
* notice: next accum: outdated-unq outdated-all / unq all: 897 4799 / 910 4829
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-11-25] / []

2024-12-09T00:42:09Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12226790178 # 698