@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-12-11T00:40:40Z",
-  "count_outdated" : 4811,
-  "uniques_outdated" : 900,
+  "timestamp" : "2024-12-11T12:15:17Z",
+  "count_outdated" : 4812,
+  "uniques_outdated" : 901,
   "count" : 4835,
   "uniques" : 911,
   "views" : [
-    {
-      "timestamp": "2024-11-27T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-11-28T00:00:00Z",
       "count": 2,
