@@ -1,12 +1,7 @@
 {
-  "count": 24,
-  "uniques": 11,
+  "count": 23,
+  "uniques": 10,
   "views": [
-    {
-      "timestamp": "2024-11-27T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-11-28T00:00:00Z",
       "count": 2,
