@@ -1,3 +1,12 @@
+2024-12-11T12:15:17Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12276143922 # 703
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-11
+* notice: last 14d: unq all: 10 23
+* notice: prev accum: outdated-unq outdated-all / unq all: 900 4811 / 911 4835
+* notice: next accum: outdated-unq outdated-all / unq all: 901 4812 / 911 4835
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2024-11-27] / []
+
 2024-12-11T00:40:40Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/12267357076 # 702
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-12-11
